# kdelibs_gsoc2010

cmake/.svn/: entries
cmake/modules-tests/.svn/: entries
cmake/modules/.svn/: entries
cmake/systeminfo/.svn/: entries
dnssd/.svn/: dir-prop-base  entries
doc/.svn/: entries
doc/api/.svn/: entries
doc/checkXML/.svn/: entries
doc/common/.svn/: entries
doc/kbuildsycoca4/.svn/: entries
doc/kconfig_compiler/.svn/: entries
doc/kcookiejar4/.svn/: entries
doc/kde4-config/.svn/: entries
doc/kded4/.svn/: entries
doc/kdeinit4/.svn/: entries
doc/kdeoptions/.svn/: entries
doc/kioslave/.svn/: entries
doc/kjs/.svn/: entries
doc/kjscmd/.svn/: entries
doc/kross/.svn/: entries
doc/makekdewidgets/.svn/: entries
doc/meinproc4/.svn/: entries
doc/preparetips/.svn/: entries
doc/qtoptions/.svn/: entries
doc/sonnet/.svn/: dir-prop-base  entries
experimental/.svn/: entries
gsoc_code/: CMakeLists.txt  KActionArg.cpp  KActionArg.h  KMenu2.h  KPushButton2.cpp  KPushButton2.h  KTEIcpp.back2  KTEIh.back  KToolBar2.cpp  KToolBar2.h  algo.back  back2  mainwindow.cpp  mainwindow.h  testScript.js
gsoc_code/lib/: CMakeLists.txt  KTextEdit2.cpp  KTextPluginInstance.cpp  KTextPluginInstance.h  KTextPluginManager.cpp  KTextPluginManager.h  KTextPluginNativeModuleBase.cpp  KTextPluginNativeModuleBase.h
gsoc_code/lib/dummy/: testKross1.cpp  testKross1.h
gsoc_code/lib/native/: TestNative.cpp  TestNative.h
gsoc_code/lib/native2/sql/: CMakeLists.txt  ktextpluginNative_Sql.desktop  sql.cpp  sql.h
gsoc_code/testPlan9/: .directory  CMakeLists.txt  KActionArg.h  KPushButton2.cpp  KPushButton2.h  KTEIcpp.back  KTEIh.back2  KToolBar2.h  back1  back3  main.cpp  mainwindow.cpp  mainwindow.h  testplan9ui.rc
gsoc_code/testPlan9/lib/: CMakeLists.txt  KTextEdit2.h  KTextPluginInstance.cpp  KTextPluginInstance.h  KTextPluginMacro.h  KTextPluginManager.cpp  KTextPluginManager.h  KTextPluginNativeBridge.cpp  KTextPluginNativeBridge.h  KTextPluginNativeModuleBase.cpp  ktextplugin_export.h
gsoc_code/testPlan9/lib/native/: CMakeLists.txt  ktextplugin_testnative.desktop
gsoc_code/testPlan9/plugin/: bracket.js
includes/.svn/: entries
includes/ConversionCheck/.svn/: entries
includes/DNSSD/.svn/: entries
includes/DOM/.svn/: entries
includes/KAccelGen/.svn/: entries
includes/KAuth/.svn/: entries
includes/KHE/.svn/: entries
includes/KIO/.svn/: entries
includes/KJS/.svn/: entries
includes/KJSEmbed/.svn/: entries
includes/KMediaPlayer/.svn/: entries
includes/KNS/.svn/: entries
includes/KNS3/.svn/: entries
includes/KNetwork/.svn/: entries
includes/KParts/.svn/: entries
includes/KSettings/.svn/: entries
includes/KTextEditor/.svn/: entries
includes/KUnitConversion/.svn/: entries
includes/KUnitTest/.svn/: entries
includes/KWallet/.svn/: entries
includes/Kross/.svn/: entries
includes/Nepomuk/.svn/: entries
includes/Plasma/.svn/: entries
includes/Solid/.svn/: entries
includes/Sonnet/.svn/: entries
includes/ThreadWeaver/.svn/: entries
includes/WTF/.svn/: entries
includes/khtml/.svn/: entries
interfaces/.svn/: dir-prop-base  entries
interfaces/khexedit/.svn/: entries
kate/.svn/: entries
kate/data/.svn/: entries  (+1 more)
kate/view/: kateview.cpp  kateview.h
kconf_update/.svn/: dir-prop-base  entries
kde3support/.svn/: dir-prop-base  entries
kdecore/.svn/: dir-prop-base  entries
kded/: kded.cpp
kded/.svn/: dir-prop-base  entries
kdesu/.svn/: dir-prop-base  entries
kdeui/: CMakeLists.txt
kdeui/.svn/: dir-prop-base  entries
kdeui/actions/: kaction.cpp  kaction.h
kdeui/dialogs/: kgestureeditwidget.cpp  kshortcutsdialog_p.h  kshortcutseditor.cpp  kshortcutseditordelegate.cpp  kshortcutseditoritem.cpp
kdeui/paged/: kpageview_p.cpp
kdeui/shortcuts/: kgesture.cpp
kdeui/widgets/: keditlistbox.h  kmainwindow.cpp  ktoolbar.cpp  ktoolbar.h  ktoolbox.cpp  ktoolbox.h  ktoolbutton.cpp  ktoolbutton.h
kdeui/xmlgui/: kactioncontainer_p.h  kxmlguibuilder.cpp  kxmlguifactory_p.cpp
kdewebkit/.svn/: entries
kdewidgets/.svn/: dir-prop-base  entries
kdoctools/: meinproc.cpp
kdoctools/.svn/: dir-prop-base  entries
kfile/.svn/: entries
khtml/.svn/: dir-prop-base  entries
khtml/html/: dtd.dtd
kimgio/.svn/: dir-prop-base  entries
kinit/.svn/: dir-prop-base  entries
kio/.svn/: dir-prop-base  entries
kioslave/.svn/: entries
kjs/.svn/: dir-prop-base  entries
kjsembed/.svn/: entries
knewstuff/.svn/: dir-prop-base  entries
knotify/.svn/: dir-prop-base  entries
kparts/.svn/: dir-prop-base  entries
kpty/.svn/: entries
kross/.svn/: entries
kunitconversion/.svn/: entries
kutils/.svn/: dir-prop-base  entries
licenses/.svn/: entries
mimetypes/.svn/: entries
nepomuk/.svn/: entries
plasma/.svn/: dir-prop-base  entries
security/.svn/: entries
solid/.svn/: entries
sonnet/.svn/: dir-prop-base  entries
threadweaver/.svn/: dir-prop-base  entries
(+600 files in other folders)
